[gd_scene load_steps=21 format=2]

[ext_resource path="res://SavingSystem/LoadSavedScene/LoadSavedScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Dice/dice.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Characters/Chad/chad_round.png" type="Texture" id=4]
[ext_resource path="res://Fonts/diceFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fotos/EnterButton.png" type="Texture" id=6]
[ext_resource path="res://UI/Dice/DiceManager.gd" type="Script" id=7]
[ext_resource path="res://UI/UISoundManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fotos/DiceBackground.png" type="Texture" id=9]
[ext_resource path="res://Fonts/card_preview.tres" type="DynamicFont" id=10]
[ext_resource path="res://UI/ChallengeCard/ViewportEnv.tres" type="Environment" id=11]
[ext_resource path="res://Fotos/BigDiceButton.png" type="Texture" id=12]
[ext_resource path="res://Fotos/diceRect.png" type="Texture" id=13]
[ext_resource path="res://UI/Dice/DicePreview.gd" type="Script" id=14]
[ext_resource path="res://UI/ChallengeCard/BackToMap.gd" type="Script" id=15]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 2, 0.01, 2 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.945098, 0.631373, 0.427451, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 2, 0.01, 2 )

[sub_resource type="Animation" id=5]
resource_name = "thrown"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("dice_black:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1, 1.5, 1.9, 2.1, 2.3 ),
"transitions": PoolRealArray( 6.96439, 9.18958, 6.06287, 5.65685, 7.46426 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 5, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 3, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dice_black:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9 ),
"transitions": PoolRealArray( 0.233258, 0.406126, 1, 0.125, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465, 0.189465 ),
"update": 0,
"values": [ Vector3( 0, 10, 0 ), Vector3( 0, 15, 0 ), Vector3( 0, 20, 0 ), Vector3( 0, 25, 0 ), Vector3( 0, 30, 0 ), Vector3( 0, 40, 0 ), Vector3( 0, 45, 0 ), Vector3( 0, 50, 0 ), Vector3( 0, 55, 0 ), Vector3( 0, 60, 0 ), Vector3( 0, 65, 0 ), Vector3( 0, 70, 0 ), Vector3( 0, 75, 0 ), Vector3( 0, 80, 0 ), Vector3( 0, 85, 0 ), Vector3( 0, 90, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../../../../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "showNumber"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../../../../../../../../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_resumo"
} ]
}

[node name="DicePreview" type="Spatial"]
script = ExtResource( 14 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.000868201
anchor_top = -0.00148168
anchor_right = 1.00087
anchor_bottom = 0.998518
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 691.998
margin_bottom = 398.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceManager" type="ColorRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -262.0
margin_right = 328.0
margin_bottom = 262.0
rect_pivot_offset = Vector2( 388.889, 585.786 )
color = Color( 0.964706, 0.921569, 0.862745, 0.94902 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceContainer" type="VBoxContainer" parent="Control/DiceManager"]
anchor_top = -0.000580796
anchor_right = 1.0
anchor_bottom = 0.999419
margin_left = -1.0
margin_top = -1.64455
margin_right = -67.0
margin_bottom = -72.6445
rect_scale = Vector2( 1.11393, 1.15982 )
custom_constants/separation = -50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/DiceManager/DiceContainer"]
margin_top = 28.0
margin_right = 590.0
margin_bottom = 79.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "PLAYER X"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="Control/DiceManager/DiceContainer"]
margin_top = 87.0
margin_right = 590.0
margin_bottom = 138.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "It's your turn!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DiceManager/DiceContainer"]
margin_top = 184.0
margin_right = 590.0
margin_bottom = 384.0
size_flags_horizontal = 7
size_flags_vertical = 6
size_flags_stretch_ratio = 3.07

[node name="Avatar" type="TextureRect" parent="Control/DiceManager/DiceContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 246.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="RollTheDice" type="TextureButton" parent="Control/DiceManager/DiceContainer/HBoxContainer"]
margin_left = 368.0
margin_top = 25.0
margin_right = 518.0
margin_bottom = 175.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 12 )

[node name="ViewportContainer" type="ViewportContainer" parent="Control/DiceManager/DiceContainer"]
visible = false
margin_left = 195.0
margin_top = 253.0
margin_right = 395.0
margin_bottom = 453.0
grow_vertical = 0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Viewport" type="Viewport" parent="Control/DiceManager/DiceContainer/ViewportContainer"]
size = Vector2( 200, 200 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Spatial" type="Spatial" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -62.1176, 12.9595, 0 )
environment = ExtResource( 11 )
fov = 46.0

[node name="DirectionalLight" type="DirectionalLight" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.00102977, 0.999999, 0, -0.999999, -0.00102977, -0.257783, 2.90285, -0.217394 )
visible = false
light_energy = 1.6

[node name="MeshInstance" type="MeshInstance" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00368154, -0.00308275, -8.01086e-05 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Spatial" type="Spatial" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial"]

[node name="object_placeHolder" type="Spatial" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial"]

[node name="dice" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.0909281, 0.995857, 0, -0.995857, -0.0909281, -0.00486958, 1.09416, -0.0293272 )
environment = ExtResource( 11 )
fov = 46.0

[node name="DirectionalLight" type="DirectionalLight" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.00102977, 0.999999, 0, -0.999999, -0.00102977, -0.257783, 2.90285, -0.217394 )
visible = false
light_energy = 1.6

[node name="MeshInstance" type="MeshInstance" parent="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00368154, -0.00308275, -8.01086e-05 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="DiceValue" type="VBoxContainer" parent="Control/DiceManager"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -263.0
margin_right = 262.0
margin_bottom = 147.0
rect_scale = Vector2( 1.11393, 1.15982 )
custom_constants/separation = -50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/DiceManager/DiceValue"]
margin_top = 89.0
margin_right = 590.0
margin_bottom = 140.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "watch the dice roll"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Control/DiceManager/DiceValue"]
margin_left = 195.0
margin_top = 195.0
margin_right = 395.0
margin_bottom = 395.0
grow_vertical = 0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Viewport" type="Viewport" parent="Control/DiceManager/DiceValue/ViewportContainer"]
size = Vector2( 200, 200 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Spatial" type="Spatial" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport"]

[node name="Camera" type="Camera" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -62.1176, 12.9595, 0 )
environment = ExtResource( 11 )
fov = 46.0

[node name="DirectionalLight" type="DirectionalLight" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.00102977, 0.999999, 0, -0.999999, -0.00102977, -0.257783, 2.90285, -0.217394 )
visible = false
light_energy = 1.6

[node name="MeshInstance" type="MeshInstance" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00368154, -0.00308275, -8.01086e-05 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="Spatial" type="Spatial" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial"]

[node name="object_placeHolder" type="Spatial" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial"]

[node name="dice" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder" instance=ExtResource( 2 )]

[node name="dice_black" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder/dice" index="0"]
transform = Transform( 0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0 )

[node name="AnimationPlayer" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder/dice" index="1"]
anims/thrown = SubResource( 5 )

[node name="Camera" type="Camera" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.0909281, 0.995857, 0, -0.995857, -0.0909281, -0.00486958, 1.09416, -0.0293272 )
environment = ExtResource( 11 )
fov = 46.0

[node name="DirectionalLight" type="DirectionalLight" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, -0.00102977, 0.999999, 0, -0.999999, -0.00102977, -0.257783, 2.90285, -0.217394 )
visible = false
light_energy = 1.6

[node name="MeshInstance" type="MeshInstance" parent="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00368154, -0.00308275, -8.01086e-05 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="DiceResumo" type="VBoxContainer" parent="Control/DiceManager"]
visible = false
anchor_top = 0.00123005
anchor_right = 1.0
anchor_bottom = 1.00123
margin_left = -1.0
margin_top = -42.6445
margin_right = -67.0
margin_bottom = -76.6445
rect_scale = Vector2( 1.11393, 1.15982 )
custom_constants/separation = -50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Control/DiceManager/DiceResumo"]
margin_top = 37.0
margin_right = 590.0
margin_bottom = 88.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "PLAYER X"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Avatar" type="TextureRect" parent="Control/DiceManager/DiceResumo"]
margin_left = 195.0
margin_top = 75.0
margin_right = 395.0
margin_bottom = 275.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/DiceManager/DiceResumo"]
margin_left = 133.0
margin_top = 270.0
margin_right = 456.0
margin_bottom = 370.0
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 1.52
custom_constants/separation = 18

[node name="Instructions" type="Label" parent="Control/DiceManager/DiceResumo/HBoxContainer"]
margin_top = 24.0
margin_right = 155.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.894118, 0.388235, 0.054902, 1 )
text = "Will walk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/DiceManager/DiceResumo/HBoxContainer"]
margin_left = 173.0
margin_right = 323.0
margin_bottom = 100.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Control/DiceManager/DiceResumo/HBoxContainer/TextureRect"]
margin_right = 146.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 5 )
text = "X STEPS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapButton" type="TextureButton" parent="Control/DiceManager/DiceResumo"]
margin_left = 245.0
margin_top = 377.0
margin_right = 345.0
margin_bottom = 477.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 6 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadMapSceneButton" type="Button" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
custom_fonts/font = ExtResource( 3 )
text = "LOAD MAP SCENE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSavedScene" parent="." instance=ExtResource( 1 )]

[node name="UISoundManager" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="Control/DiceManager/DiceContainer/HBoxContainer/RollTheDice" to="." method="show_animation"]
[connection signal="pressed" from="Control/DiceManager/DiceResumo/MapButton" to="Control/DiceManager/DiceContainer/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder/dice" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/DiceManager/DiceResumo/MapButton" to="Control/DiceManager/DiceResumo/MapButton" method="discard_dice_info"]
[connection signal="pressed" from="Control/LoadMapSceneButton" to="LoadSavedScene" method="load_saved_scene"]

[editable path="Control/DiceManager/DiceValue/ViewportContainer/Viewport/Spatial/Spatial/object_placeHolder/dice"]
